# ofxGgmlVision

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HERMES.md  README.md  addon_config.mk  ofxggml-addon.json
.github/: copilot-instructions.md
.github/instructions/: ofxggml-ecosystem.instructions.md
.github/workflows/: addon-hygiene.yml  coding-agent-instructions.yml  metadata-validation.yml  multi-platform-smoke.yml
docs/: ARCHITECTURE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_POLICY.md  ROADMAP.md  VISION_WORKFLOWS.md
docs/releases/: v1.0.1.md
ofxGgmlVisionImageExample/: README.md  addons.make
ofxGgmlVisionImageExample/src/: main.cpp  ofApp.cpp  ofApp.h
scripts/: doctor-vision.bat  doctor-vision.ps1  doctor-vision.sh  release-candidate.bat  release-candidate.ps1  release-candidate.sh  run-vision-runtime-smoke.bat  run-vision-runtime-smoke.ps1  run-vision-runtime-smoke.sh  test-addon.bat  test-addon.ps1  test-addon.sh  test-doctor-vision.ps1  test-vision-runtime-smoke.ps1  validate-local.bat  validate-local.ps1  validate-local.sh
src/: ofxGgmlVision.h  ofxGgmlVisionVersion.h
src/ofxGgmlVision/: ofxGgmlVisionTypes.h  ofxGgmlVisionUtils.cpp  ofxGgmlVisionUtils.h
tests/: CMakeLists.txt  test_main.cpp
